--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "test": "jest --watch --verbose"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.2",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-table": "^7.7.0",
     "swr": "^1.1.0"
   },
   "devDependencies": {
